# ALS-Companion

./: .eslintrc.cjs  .gitignore  README.md  USER_GUIDE.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
assets/: README.md
scripts/: make-sample-media.py  seed-sample-data.py
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.seed.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs
src/application/: README.md  errors.ts
src/application/ai/: agent-prompt.ts  agent-proposals.ts  agent-tool.ts  agent-tools.ts  ai-types.ts
src/application/analytics/: analytics.ts
src/application/export/: csv.ts  docx-writer.ts  export-engine.ts  export-types.ts  image-info.ts  pdf-writer.ts  report-model.ts
src/application/ports/: ai-assistant.ts  animal-repository.ts  annotation-context-reader.ts  annotation-link-repository.ts  annotation-repository.ts  biomarker-result-repository.ts  biomarker-sample-repository.ts  calendar.ts  dashboard-reader.ts  file-storage.ts  histology-session-repository.ts  mri-comparison-reader.ts  mri-session-repository.ts  observation-repository.ts  protocol-template-repository.ts  research-asset-repository.ts  search.ts  storage-repository.ts  study-repository.ts  system.ts  timeline-event-repository.ts
src/application/services/: agent-service.ts  analytics-service.ts  animals-service.ts  annotation-link-service.ts  annotation-service.ts  biomarker-service.ts  dashboard-service.ts  deletion-service.ts  export-service.ts  histology-session-service.ts  mri-comparison-service.ts  mri-session-service.ts  observations-service.ts  protocol-template-service.ts  publication-workspace-service.ts  research-asset-service.ts  search-service.ts  storage-service.ts  studies-service.ts  timeline-events-service.ts
src/application/use-cases/: apply-protocol-to-animal.ts  archive-study.ts  assert-study-writable.ts  attach-image-to-asset.ts  create-animal.ts  create-annotation.ts  create-biomarker-result.ts  create-biomarker-sample.ts  create-histology-session.ts  create-mri-session.ts  create-observation.ts  create-research-asset.ts  create-study.ts  deps.ts  (+52 more)
src/composition/: README.md  analytics.ts  animals.ts  annotation-links.ts  annotations.ts  assistant.ts  biomarkers.ts  dashboard.ts  deletion.ts  export.ts  histology-sessions.ts  mri-comparison.ts  mri-sessions.ts  observations.ts  protocol-templates.ts  publication.ts  research-assets.ts  search.ts  storage.ts  studies.ts  timeline-events.ts
src/domain/: README.md
src/infrastructure/: README.md
src/presentation/: README.md
(+324 files in other folders)
