[package]
name = "als-research-companion"
version = "2.8.0"
description = "A research productivity platform for ALS transgenic mouse studies."
authors = ["ALS Research Companion"]
edition = "2021"
rust-version = "1.77.2"

# The application logic lives in a library crate so it can be shared with the
# desktop and (future) mobile entry points.
[lib]
name = "als_research_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `protocol-asset` enables the sandboxed asset protocol used to load managed
# local images in the webview (scope set in tauri.conf.json → app.security.assetProtocol).
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
# Outbound HTTPS for the AI assistant (Gemini). Runs on the Rust side so the API
# key never enters the webview/bundle and the request bypasses the webview CSP.
# Uses reqwest's default TLS (native-tls → Windows SChannel; no OpenSSL) — the
# `json` feature adds request-body serialization.
reqwest = { version = "0.13", features = ["json"] }
# OS credential store (Windows Credential Manager) for the AI API key — kept out
# of the database, localStorage, and the app bundle.
keyring = { version = "3", features = ["windows-native"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
